# CMakeSPLTemplate

./: .gitignore  CMakeLists.txt  README.md
user/src/: main.c
